2012-11-27  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix make-plots png creation for SL5

2012-11-23  Peter Richardson <peter.richardson@durham.ac.uk>

	* Added ATLAS_2012_CONF_2012_153 4-lepton SUSY search

2012-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PHOTONS by Steve Lloyd and AB, for testing general
	unisolated photon properties, especially those associated with
	charged leptons (e and mu).

2012-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PRINTEVENT, a convenient (but verbose!) analysis for
	printing out event details to stdout.

2012-11-15  Andy Buckley  <andy.buckley@cern.ch>

	* Removing the long-unused/defunct autopackage system.

2012-11-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added LHCF_2012_I1115479 analysis
	* Added ATLAS_2011_I894867 analysis

2012-11-14  Andy Buckley  <andy.buckley@cern.ch>

	* Converting the argument order of logspace, clarifying the
	arguments, updating affected code, and removing Analysis::logBinEdges.

	* Merging updates from the AIDA maintenance branch up to r4002
	(latest revision for next merges is r4009).

2012-11-11  Andy Buckley  <andy.buckley@cern.ch>

	* include/Math/: Various numerical fixes to Vector3::angle and
	changing the 4 vector mass treatment to permit spacelike
	virtualities (in some cases even the fuzzy isZero assert check was
	being violated). The angle check allows a clean-up of some
	workaround code in MC_VH2BB.

2012-10-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1107658 analysis

2012-10-11  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CDF_2012_NOTE10874 analysis

2012-10-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1183818 analysis

2012-07-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Cleanup and multiple fixes in CMS_2011_S9120041

	* Bugfixed in ALEPH_2004_S5765862 and ATLAS_2010_CONF_2010_049
	(thanks to Anil Pratap)

2012-08-09  Andy Buckley  <andy.buckley@cern.ch>
