@@ -1,3 +1,11 @@
+2012-11-27  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding XLabel and YLabel setting in histo/profile/scatter booking.
+
+2012-11-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added CMS_2012_I1102908 analysis
+
 2012-11-27  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Fix make-plots png creation for SL5
